Fixed modal that was too wide

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -465,4 +465,11 @@ div#discuss-it-recorder .ar-records__record {
   display:none;
 }
 
+@media (max-width: 768px) {
+  .modal-dialog {
+    width: 95vw;
+    max-width: none;
+  }
+}
+
 
